feat(ai): Dynamic Commentator Personas and Structured Match Narration (#163)
* feat(domain): Create Commentator and CommentaryTeam entities and repositories

* feat(data): Implement commentator data population via DataInitializer

* refactor(data): Separate commentators and teams in data initialization

* feat(show): Add CommentaryTeam selection to Show and ShowTemplate

* fix(db): Add migrations for commentary system tables and columns

* feat(ai): Update system instructions for tagged dialogue output

* conductor(plan): Mark task 'Update AI system instructions' as complete

* feat(ai): Implement NarrationParserService for dialogue-style output

* conductor(plan): Mark Phase 2 as complete

* feat(ai): Update narration format to 'Name: Text' and include match action

* chore(conductor): Add database migration synchronization and immutability guidelines

* feat(ai): Finalize commentator context integration and sync migration metadata

* feat(ui): Add default commentary team to Continuum and enhance booking logic

* feat(ui): Integrate CommentaryComponent and default team logic into MatchView

* feat(ui): Implement alignment-based styling and finalize Phase 3

* conductor(plan): Mark Phase 3 as complete

* docs: Add E2E doc test and guide section for Dynamic Commentator Personas

* docs: Update screenshots and manifest with new commentary format

* conductor(plan): Mark track 'Dynamic Commentator Personas' as complete

* feat(ui): Finalize MatchView enhancements and sync metadata

* test: Fix AbstractMatchNarrationServiceTest to match new prompt format

* conductor(plan): Finalize Phase 4 verification

* refactor(test): Simplify and organize imports in RankingViewE2ETest

* feat(ai): Include wrestler alignment in AI context and style commentary accordingly

* conductor(plan): Finalize track with wrestler alignment integration

* feat(ai): Add explicit commentary interaction rules for wrestler alignments

* conductor(plan): Finalize prompt engineering with interaction 